# AdaptiveTest

./: CMakeLists.txt  main.cpp
my_lib/: CMakeLists.txt
my_lib/include/: integral.h
